book: update id
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/id/v2/Git-Basics-Mendapatkan-Repository-Git.html
+++ b/external/book/content/book/id/v2/Git-Basics-Mendapatkan-Repository-Git.html
@@ -16,6 +16,11 @@ book:
     previous: book/id/v2/Memulai-Kesimpulan
     next: book/id/v2/Git-Basics-Recording-Changes-to-the-Repository
 title: Git - Mendapatkan Repository Git
+aliases:
+- "/book/id/Dasar-dasar-Git.html"
+- "/book/id/v1/Dasar-dasar-Git.html"
+- "/book/id/Dasar-dasar-Git-Mengambil-Repositori-Git.html"
+- "/book/id/v1/Dasar-dasar-Git-Mengambil-Repositori-Git.html"
 ---
 <p>If you can read only one chapter to get going with Git, this is it.
 This chapter covers every basic command you need to do the vast majority of the things you’ll eventually spend your time doing with Git.
