--- a/external/book/content/book/id/v2/Git-Basics-Recording-Changes-to-the-Repository.html
+++ b/external/book/content/book/id/v2/Git-Basics-Recording-Changes-to-the-Repository.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Mendapatkan-Repository-Git
     next: book/id/v2/Git-Basics-Viewing-the-Commit-History
 title: Git - Recording Changes to the Repository
+aliases:
+- "/book/id/Dasar-dasar-Git-Merekam-Perubahan-ke-dalam-Repositori.html"
+- "/book/id/v1/Dasar-dasar-Git-Merekam-Perubahan-ke-dalam-Repositori.html"
 ---
 <h2 id="_recording_changes_to_the_repository">Recording Changes to the Repository</h2>
 <div class="paragraph">
