--- a/external/book/content/book/id/v2/Git-Basics-Tagging.html
+++ b/external/book/content/book/id/v2/Git-Basics-Tagging.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Working-with-Remotes
     next: book/id/v2/Git-Basics-Alias-Git
 title: Git - Tagging
+aliases:
+- "/book/id/Dasar-dasar-Git-Menandai.html"
+- "/book/id/v1/Dasar-dasar-Git-Menandai.html"
 ---
 <h2 id="_git_tagging">Tagging</h2>
 <div class="paragraph">
