--- a/external/book/content/book/id/v2/Git-Basics-Undoing-Things.html
+++ b/external/book/content/book/id/v2/Git-Basics-Undoing-Things.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Viewing-the-Commit-History
     next: book/id/v2/Git-Basics-Working-with-Remotes
 title: Git - Undoing Things
+aliases:
+- "/book/id/Dasar-dasar-Git-Membatalkan-Apapun.html"
+- "/book/id/v1/Dasar-dasar-Git-Membatalkan-Apapun.html"
 ---
 <h2 id="_undoing">Undoing Things</h2>
 <div class="paragraph">
