--- a/external/book/content/book/id/v2/Git-Basics-Viewing-the-Commit-History.html
+++ b/external/book/content/book/id/v2/Git-Basics-Viewing-the-Commit-History.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Recording-Changes-to-the-Repository
     next: book/id/v2/Git-Basics-Undoing-Things
 title: Git - Viewing the Commit History
+aliases:
+- "/book/id/Dasar-dasar-Git-Melihat-Sejarah-Commit.html"
+- "/book/id/v1/Dasar-dasar-Git-Melihat-Sejarah-Commit.html"
 ---
 <h2 id="_viewing_history">Viewing the Commit History</h2>
 <div class="paragraph">
