--- a/external/book/content/book/id/v2/Git-Basics-Working-with-Remotes.html
+++ b/external/book/content/book/id/v2/Git-Basics-Working-with-Remotes.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Undoing-Things
     next: book/id/v2/Git-Basics-Tagging
 title: Git - Working with Remotes
+aliases:
+- "/book/id/Dasar-dasar-Git-Bekerja-Berjarak.html"
+- "/book/id/v1/Dasar-dasar-Git-Bekerja-Berjarak.html"
 ---
 <h2 id="_remote_repos">Working with Remotes</h2>
 <div class="paragraph">
