--- a/external/book/content/book/id/v2/Git-Branching-Branch-Management.html
+++ b/external/book/content/book/id/v2/Git-Branching-Branch-Management.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Branching-Basic-Branching-and-Merging
     next: book/id/v2/Git-Branching-Branching-Workflows
 title: Git - Branch Management
+aliases:
+- "/book/id/Branching-Pada-Git-Manajemen-Branch.html"
+- "/book/id/v1/Branching-Pada-Git-Manajemen-Branch.html"
 ---
 <h2 id="_branch_management">Branch Management</h2>
 <div class="paragraph">
