--- a/external/book/content/book/id/v2/Git-Branching-Branches-in-a-Nutshell.html
+++ b/external/book/content/book/id/v2/Git-Branching-Branches-in-a-Nutshell.html
@@ -16,6 +16,11 @@ book:
     previous: book/id/v2/Git-Basics-Summary
     next: book/id/v2/Git-Branching-Basic-Branching-and-Merging
 title: Git - Branches in a Nutshell
+aliases:
+- "/book/id/Branching-Pada-Git.html"
+- "/book/id/v1/Branching-Pada-Git.html"
+- "/book/id/Branching-Pada-Git-Apakah-Branch-Itu.html"
+- "/book/id/v1/Branching-Pada-Git-Apakah-Branch-Itu.html"
 ---
 <p>
 Nearly every VCS has some form of branching support.
