--- a/external/book/content/book/id/v2/Git-Branching-Branching-Workflows.html
+++ b/external/book/content/book/id/v2/Git-Branching-Branching-Workflows.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Branching-Branch-Management
     next: book/id/v2/Git-Branching-Remote-Branches
 title: Git - Branching Workflows
+aliases:
+- "/book/id/Branching-Pada-Git-Alur-Kerja-Branching.html"
+- "/book/id/v1/Branching-Pada-Git-Alur-Kerja-Branching.html"
 ---
 <h2 id="_branching_workflows">Branching Workflows</h2>
 <div class="paragraph">
