--- a/external/book/content/book/id/v2/Git-Branching-Rebasing.html
+++ b/external/book/content/book/id/v2/Git-Branching-Rebasing.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Branching-Remote-Branches
     next: book/id/v2/Git-Branching-Summary
 title: Git - Rebasing
+aliases:
+- "/book/id/Branching-Pada-Git-Rebasing.html"
+- "/book/id/v1/Branching-Pada-Git-Rebasing.html"
 ---
 <h2 id="_rebasing">Rebasing</h2>
 <div class="paragraph">
