--- a/external/book/content/book/id/v2/Git-Branching-Remote-Branches.html
+++ b/external/book/content/book/id/v2/Git-Branching-Remote-Branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Branching-Branching-Workflows
     next: book/id/v2/Git-Branching-Rebasing
 title: Git - Remote Branches
+aliases:
+- "/book/id/Branching-Pada-Git-Remote-Branches.html"
+- "/book/id/v1/Branching-Pada-Git-Remote-Branches.html"
 ---
 <h2 id="_remote_branches">Remote Branches</h2>
 <div class="paragraph">
