--- a/external/book/content/book/id/v2/Git-Branching-Summary.html
+++ b/external/book/content/book/id/v2/Git-Branching-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Branching-Rebasing
     next: book/id/v2/Git-di-Server-Protokol
 title: Git - Summary
+aliases:
+- "/book/id/Branching-Pada-Git-Kesimpulan.html"
+- "/book/id/v1/Branching-Pada-Git-Kesimpulan.html"
 ---
 <h2 id="_summary_2">Summary</h2>
 <div class="paragraph">
