--- a/external/book/content/book/id/v2/Memulai-Dasar-dasar-Git.html
+++ b/external/book/content/book/id/v2/Memulai-Dasar-dasar-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Memulai-Sejarah-Singkat-Git
     next: book/id/v2/Memulai-Command-Line
 title: Git - Dasar-dasar Git
+aliases:
+- "/book/id/Memulai-Git-Dasar-Git.html"
+- "/book/id/v1/Memulai-Git-Dasar-Git.html"
 ---
 <h2 id="_dasar_dasar_git">Dasar-dasar Git</h2>
 <div class="paragraph">
