--- a/external/book/content/book/id/v2/Memulai-Kesimpulan.html
+++ b/external/book/content/book/id/v2/Memulai-Kesimpulan.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Memulai-Mendapatkan-Bantuan
     next: book/id/v2/Git-Basics-Mendapatkan-Repository-Git
 title: Git - Kesimpulan
+aliases:
+- "/book/id/Memulai-Git-Kesimpulan.html"
+- "/book/id/v1/Memulai-Git-Kesimpulan.html"
 ---
 <h2 id="_kesimpulan">Kesimpulan</h2>
 <div class="paragraph">
