--- a/external/book/content/book/id/v2/Memulai-Mendapatkan-Bantuan.html
+++ b/external/book/content/book/id/v2/Memulai-Mendapatkan-Bantuan.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Memulai-Pengaturan-Awal-Git
     next: book/id/v2/Memulai-Kesimpulan
 title: Git - Mendapatkan Bantuan
+aliases:
+- "/book/id/Memulai-Git-Memperoleh-Pertolongan.html"
+- "/book/id/v1/Memulai-Git-Memperoleh-Pertolongan.html"
 ---
 <h2 id="_git_help">Mendapatkan Bantuan</h2>
 <div class="paragraph">
