--- a/external/book/content/book/id/v2/Memulai-Pengaturan-Awal-Git.html
+++ b/external/book/content/book/id/v2/Memulai-Pengaturan-Awal-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Memulai-Memasang-Git
     next: book/id/v2/Memulai-Mendapatkan-Bantuan
 title: Git - Pengaturan Awal Git
+aliases:
+- "/book/id/Memulai-Git-Setup-Git-Untuk-Pertama-Kalinya.html"
+- "/book/id/v1/Memulai-Git-Setup-Git-Untuk-Pertama-Kalinya.html"
 ---
 <h2 id="_first_time">Pengaturan Awal Git</h2>
 <div class="paragraph">
