--- a/external/book/content/book/id/v2/Memulai-Tentang-Version-Control.html
+++ b/external/book/content/book/id/v2/Memulai-Tentang-Version-Control.html
@@ -16,6 +16,11 @@ book:
     previous: book/id/v2/Memulai-Tentang-Version-Control
     next: book/id/v2/Memulai-Sejarah-Singkat-Git
 title: Git - Tentang Version Control
+aliases:
+- "/book/id/Memulai-Git.html"
+- "/book/id/v1/Memulai-Git.html"
+- "/book/id/Memulai-Git-Tentang-Version-Control.html"
+- "/book/id/v1/Memulai-Git-Tentang-Version-Control.html"
 ---
 <p>Bab ini akan membahas tentang memulai dengan Git.
 Kita akan mulai dengan menjelaskan beberapa latar belakang pada peralatan <em>version control</em>, kemudian beralih ke bagaimana cara agar Git dapat berjalan pada sistem Anda, dan terakhir, bagaimana cara mengaturnya agar dapat mulai bekerja dengan Git.
