--- a/external/book/content/book/id/v2/Git-Basics-Alias-Git.html
+++ b/external/book/content/book/id/v2/Git-Basics-Alias-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Tagging
     next: book/id/v2/Git-Basics-Summary
 title: Git - Alias Git
+aliases:
+- "/book/id/Dasar-dasar-Git-Tips-dan-Tricks.html"
+- "/book/id/v1/Dasar-dasar-Git-Tips-dan-Tricks.html"
 ---
 <h2 id="_git_aliases">Alias Git</h2>
 <div class="paragraph">
