--- a/external/book/content/book/id/v2/Git-Basics-Summary.html
+++ b/external/book/content/book/id/v2/Git-Basics-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Git-Basics-Alias-Git
     next: book/id/v2/Git-Branching-Branches-in-a-Nutshell
 title: Git - Summary
+aliases:
+- "/book/id/Dasar-dasar-Git-Simpulan.html"
+- "/book/id/v1/Dasar-dasar-Git-Simpulan.html"
 ---
 <h2 id="_summary">Summary</h2>
 <div class="paragraph">
