--- a/external/book/content/book/id/v2/Memulai-Memasang-Git.html
+++ b/external/book/content/book/id/v2/Memulai-Memasang-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Memulai-Command-Line
     next: book/id/v2/Memulai-Pengaturan-Awal-Git
 title: Git - Memasang Git
+aliases:
+- "/book/id/Memulai-Git-Menginstall-Git.html"
+- "/book/id/v1/Memulai-Git-Menginstall-Git.html"
 ---
 <h2 id="_memasang_git">Memasang Git</h2>
 <div class="paragraph">
