--- a/external/book/content/book/id/v2/Memulai-Sejarah-Singkat-Git.html
+++ b/external/book/content/book/id/v2/Memulai-Sejarah-Singkat-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/id/v2/Memulai-Tentang-Version-Control
     next: book/id/v2/Memulai-Dasar-dasar-Git
 title: Git - Sejarah Singkat Git
+aliases:
+- "/book/id/Memulai-Git-Sejarah-Singkat-Git.html"
+- "/book/id/v1/Memulai-Git-Sejarah-Singkat-Git.html"
 ---
 <h2 id="_sejarah_singkat_git">Sejarah Singkat Git</h2>
 <div class="paragraph">
