--- a/external/book/content/book/id/v2/_index.html
+++ b/external/book/content/book/id/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/id/v2.html"
 aliases:
 - "/book/id/v2/index.html"
+- "/book/id/v1/index.html"
 - "/book/id/index.html"
 ---
