book: update sr
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/sr/v2/Додатак-В:-Гит-команде-Подешавање-и-конфигурација.html
+++ b/external/book/content/book/sr/v2/Додатак-В:-Гит-команде-Подешавање-и-конфигурација.html
@@ -17,6 +17,9 @@ book:
     next: book/sr/v2/Додатак-В:-Гит-команде-Набављање-и-креирање-пројеката
 title: Git - Подешавање и конфигурација
 url: "/book/sr/v2/Додатак-В:-Гит-команде-Подешавање-и-конфигурација.html"
+aliases:
+- "/book/sr/commands.html"
+- "/book/sr/v1/commands.html"
 ---
 <p>Кроз ову књигу смо увели десетине Гит команди и заиста смо се трудили да их уводимо уз причу, полако додајући још команди како се прича развија.
 Међутим, због тога су примери употребе команди донекле разбацани по целој књизи.</p><p>У овом додатку ћемо проћи кроз све Гит команде које смо обрадили у књизи, грубо груписане по намени.
