--- a/external/book/content/book/sr/v2/Почетак-Инсталирање-програма-Гит.html
+++ b/external/book/content/book/sr/v2/Почетак-Инсталирање-програма-Гит.html
@@ -17,6 +17,9 @@ book:
     next: book/sr/v2/Почетак-Подешавања-за-први-пут
 title: Git - Инсталирање програма Гит
 url: "/book/sr/v2/Почетак-Инсталирање-програма-Гит.html"
+aliases:
+- "/book/sr/Почетак-Installing-Git.html"
+- "/book/sr/v1/Почетак-Installing-Git.html"
 ---
 <h2 id="_инсталирање_програма_гит">Инсталирање програма Гит</h2>
 <div class="paragraph">
