--- a/external/book/content/book/sr/v2/Почетак-Кратка-историја-програма-Гит.html
+++ b/external/book/content/book/sr/v2/Почетак-Кратка-историја-програма-Гит.html
@@ -17,6 +17,9 @@ book:
     next: book/sr/v2/Почетак-Шта-је-Гит%3F
 title: Git - Кратка историја програма Гит
 url: "/book/sr/v2/Почетак-Кратка-историја-програма-Гит.html"
+aliases:
+- "/book/sr/Почетак-Кратка-историја-Гита.html"
+- "/book/sr/v1/Почетак-Кратка-историја-Гита.html"
 ---
 <h2 id="_кратка_историја_програма_гит">Кратка историја програма Гит</h2>
 <div class="paragraph">
