--- a/external/book/content/book/sr/v2/Почетак-О-контроли-верзије.html
+++ b/external/book/content/book/sr/v2/Почетак-О-контроли-верзије.html
@@ -17,6 +17,11 @@ book:
     next: book/sr/v2/Почетак-Кратка-историја-програма-Гит
 title: Git - О контроли верзије
 url: "/book/sr/v2/Почетак-О-контроли-верзије.html"
+aliases:
+- "/book/sr/Почетак.html"
+- "/book/sr/v1/Почетак.html"
+- "/book/sr/Почетак-О-контроли-верзије.html"
+- "/book/sr/v1/Почетак-О-контроли-верзије.html"
 ---
 <p>Ово поглавље ће се бавити неким основним стварима о програму Гит.
 Почећемо уз кратка објашњења о томе како раде алати за контролу верзије, а онда ћемо прећи на то како подесити програм Гит да ради на систему који користите и на крају ћемо све то уклопити тако да можете почети са радом.
