--- a/external/book/content/book/sr/v2/Почетак-Подешавања-за-први-пут.html
+++ b/external/book/content/book/sr/v2/Почетак-Подешавања-за-први-пут.html
@@ -17,6 +17,9 @@ book:
     next: book/sr/v2/Почетак-Тражење-помоћи
 title: Git - Подешавања за први пут
 url: "/book/sr/v2/Почетак-Подешавања-за-први-пут.html"
+aliases:
+- "/book/sr/Почетак-First-Time-Git-Setup.html"
+- "/book/sr/v1/Почетак-First-Time-Git-Setup.html"
 ---
 <h2 id="_first_time">Подешавања за први пут</h2>
 <div class="paragraph">
