--- a/external/book/content/book/sr/v2/Почетак-Резиме.html
+++ b/external/book/content/book/sr/v2/Почетак-Резиме.html
@@ -17,6 +17,9 @@ book:
     next: book/sr/v2/Основе-програма-Гит-Прављење-Гит-репозиторијума
 title: Git - Резиме
 url: "/book/sr/v2/Почетак-Резиме.html"
+aliases:
+- "/book/sr/Почетак-Закључак.html"
+- "/book/sr/v1/Почетак-Закључак.html"
 ---
 <h2 id="_резиме">Резиме</h2>
 <div class="paragraph">
