--- a/external/book/content/book/sr/v2/Почетак-Тражење-помоћи.html
+++ b/external/book/content/book/sr/v2/Почетак-Тражење-помоћи.html
@@ -17,6 +17,9 @@ book:
     next: book/sr/v2/Почетак-Резиме
 title: Git - Тражење помоћи
 url: "/book/sr/v2/Почетак-Тражење-помоћи.html"
+aliases:
+- "/book/sr/Почетак-Getting-Help.html"
+- "/book/sr/v1/Почетак-Getting-Help.html"
 ---
 <h2 id="_git-help">Тражење помоћи</h2>
 <div class="paragraph">
