--- a/external/book/content/book/sr/v2/_index.html
+++ b/external/book/content/book/sr/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/sr/v2.html"
 aliases:
 - "/book/sr/v2/index.html"
+- "/book/sr/v1/index.html"
 - "/book/sr/index.html"
 ---
