--- a/external/book/content/book/sr/v2/Почетак-Шта-је-Гит?.html
+++ b/external/book/content/book/sr/v2/Почетак-Шта-је-Гит?.html
@@ -19,6 +19,8 @@ title: Git - Шта је Гит?
 url: "/book/sr/v2/Почетак-Шта-је-Гит?.html"
 aliases:
 - "/book/sr/v2/Почетак-Шта-је-Гит.html"
+- "/book/sr/Почетак-Git-Basics.html"
+- "/book/sr/v1/Почетак-Git-Basics.html"
 ---
 <h2 id="what_is_git_section">Шта је Гит?</h2>
 <div class="paragraph">
